# NLP-IMDbMovieGenreClassification

./: .gitignore  Dockerfile  README.md  data_insights.ipynb  pyproject.toml  requirements.txt
nlpimdbmoviereviews/: constants.py  dataloader.py  dataset.py  models.py  trainer.py  validators.py
scripts/: score.py  test_api.py  train.py  validation.py
